hphp/hack/test/typecheck/attributes/enumclass_attribute_ordering.php.rust_elab.exp
File "enumclass_attribute_ordering.php", line 8, characters 12-14:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
